# Inzynierka_klasyfikator

./: .dockerignore  .gitignore  Dockerfile  Klasyfikator_Intencji.ipynb  README.md  analysis_gemini_test_results.tsv  analyze_gemini_test_results.py  analyze_zero_shot_results.py  classifier.py  classifier1.py  classifier2.py  classifier3.py  classifier_voting.py  docker-bake.hcl  docker-compose.klasyfikator.yml  docker-compose.yml  eval_classifier.py  eval_classifier1.py  eval_classifier2.py  eval_classifier3.py  eval_classifier_test.py  eval_classifier_voting.py  eval_gemini_test.py  eval_gemini_zero_shot.py  find_best_k.py  intent_embeddings.npz  intent_embeddings_centroid.npz  intent_embeddings_knn.npz  intents.json  intents2.json  intents_response.json  intents_response2.json  main.py  predictor.py  prompts_log.json  prompts_log_zero_shot.json  pyproject.toml  samples_debug.json  samples_debug_gemini.json  samples_debug_zero_shot.json  (+16 more)
.github/workflows/: deploy-klasyfikator.yml  docker-publish.yml
examples/: Inżynierka-choroby.tsv  Inżynierka-kowale.tsv  Inżynierka-podkucia.tsv  Inżynierka-rozrody.tsv  Inżynierka-weterynarze.tsv  Inżynierka-wydarzenia_profilaktyczne.tsv  examples_konie.tsv  transformed_examples.json
infra/Ansible/inventory/: inventory.yml
infra/Ansible/playbooks/: deploy-using-docker.yml
