[project]
name = "inzynierka-klasyfikator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.0",
    "numpy>=2.3.3",
    "pydantic>=2.12.0",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.1",
    "typing>=3.10.0.0",
    "uvicorn[standard]>=0.37.0",
]
